Corrige mapeamento de enums e validacao de parametros de entrada